新增主题+错误信息优化

--- a/src/assets/style/theme/register.scss
+++ b/src/assets/style/theme/register.scss
@@ -1,5 +1,4 @@
 @import '~@/assets/style/theme/theme-base.scss';
-
 @import '~@/assets/style/theme/d2/index.scss';
 @import '~@/assets/style/theme/chester/index.scss';
 @import '~@/assets/style/theme/element/index.scss';
@@ -7,3 +6,4 @@
 @import '~@/assets/style/theme/star/index.scss';
 @import '~@/assets/style/theme/tomorrow-night-blue/index.scss';
 @import '~@/assets/style/theme/violet/index.scss';
+@import '~@/assets/style/theme/xc/index.scss';
